<resources>
    <string name="app_name">Visit Auckland</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="hotels">Hotels</string>
    <string name="flatmatesWanted">FlatmatesWanted</string>
    <string name="foodsAndDrinks">Foods</string>
    <string name="label_language">Main Language</string>
    <string name="label_airports">Main Airport</string>
    <string name="label_transport">Modes of Transport</string>
    <string name="label_time">Local Time</string>
    <string name="label_about_city">About the City</string>
    <string name="label_btn_website">Visit Website</string>
    <string name="airport_name">Auckland airport</string>
    <string name="country_language">English</string>
    <string name="label_country">Country</string>
    <string name="hotel1description">Union Station is a major railway station and intermodal
        transportation hub in Toronto, Ontario, Canada. It is located on Front Street West,
        on the south side of the block bounded by Bay Street and York Street in downtown Toronto.
        The station building is owned by the City of Toronto, while the train shed and trackage
        is owned by the commuter rail operator GO Transit. Union Station has been designated a
        National Historic Site of Canada since 1975, and a Heritage Railway Station since 1989.</string>
    <string name="hotel2">Hotel1</string>
    <string name="hotel1">Hotel2</string>
    <string name="hotel3">Hotel3</string>
    <string name="hotel4">Hotel4</string>
    <string name="flatmate1">flatmate1</string>
    <string name="flatmate2">flatmate2</string>
    <string name="flatmate3">flatmate3</string>
    <string name="flatmate4">flatmate4</string>
    <string name="flatmate5">flatmate4</string>
    <string name="flatmate6">flatmate4</string>
    <string name="flatmate7">flatmate4</string>
    <string name="restaurant1">restaurant1</string>
    <string name="restaurant2">restaurant2</string>
    <string name="restaurant3">restaurant3</string>
    <string name="restaurant4">restaurant4</string>
    <string name="restaurant5">restaurant4</string>
    <string name="restaurant6">restaurant4</string>
    <string name="restaurant7">restaurant4</string>
    <string name="restaurant8">restaurant4</string>
    <string name="restaurant9">restaurant4</string>
    <string name="restaurant10">restaurant4</string>
    <string name="restaurant11">restaurant4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="overview_category">Toronto</string>
    <string name="know_toronto">T.O.</string>
    <string name="architecture_category">Architecture</string>
    <string name="restaurant_category">Restaurants</string>
    <string name="shopping_category">Shopping</string>
    <string name="music_and_nightlife_category">Music and Nightlife</string>
    <string name="address_title">Address</string>
    <string name="contact_title">Contact</string>
    <string name="take_me_text">take me</string>
    <string name="bonjour_text">bonjour!</string>
    <string name="toronto_eton_center">Start your day off at one of the city’s most iconic
        shopping hubs – Toronto Eaton Centre. Conveniently located downtown on Yonge Street between
        Queen and Dundas, this stylish mall is a Toronto landmark. Snap a photo in front of the
        famous Canada Geese sculpture flying overhead before strolling beneath the spectacular glass
        galleria and exploring the more than 230 retailers, restaurants and services.
    \n\nAllocate at least an hour and a half to spend here. Start off at Hudson’s Bay on Queen Street
        (the company’s flagship location) where you can find high-end designer items in The Room,
        a Saks Fifth Avenue (!) as well as mid-priced merchandise throughout the store. Then explore
        some of the mall’s many other highlights, including J. Crew, a flagship HnM and the
        Apple Store. Once you’ve worked up an appetite, head to the sprawling food court where
        numerous culinary options await.</string>
    <string name="yorkville_village">Make your way to Toronto’s most upscale shopping district –
        Bloor-Yorkville, also known as the “Mink Mile.” With price tags ranging into the thousands
        of dollars, this is not shopping for the faint of heart (or the budget-constrained).
    \n\nIn Yorkville Village, Bloor-Yorkville’s high-end shopping centre, sought-after fashion brands
        are ripe for the picking at specialty boutiques like Marina Rinaldi, NANNI and Via Cavour.
        You can also venture outside of the mall and explore the many designer stores lining Bloor
        Street – Tiffany n Co., Prada, Chanel and Louis Vuitton, to name a few. Window shopping is
        encouraged!</string>
    <string name="yorkdale_shopping_center">Take a short drive (or subway ride) northwest to
        Yorkdale Shopping Centre. This mall packs an impressive range of merchandise – everything
        from books to toys to fashion to kitchenware – into its 250-plus stores. In addition to an
        array of fashion and accessory stores, Yorkdale has recently opened its doors to unique
        retailers like The LEGO Store and Zara Home.
    \n\nExplore at your leisure before grabbing a snack at one of the mall’s sit-down restaurants
        (Moxie’s or Milestone’s are always popular choices).
        Then pack your bags back into the car to continue your shopping extravaganza.</string>
    <string name="vaughn_mills">A bit north of Toronto in the city of Vaughan (easily accessible via
        Highway 400) lies Vaughan Mills shopping centre. Anchored by fifteen retailers including Saks
        OFF 5th, The Children’s Place and Victoria’s Secret, this outlet retail complex is a
        shopper’s dream.
    \n\nOutdoorsy types should be sure to head to the massive Bass Pro Shops Outdoor World, replete
        with hunting, fishing and camping gear. And if you’re toting tots, treat them with a trip to
        the 40,000 square foot LEGOLAND Discovery Centre, complete with rides, 4D cinema, Master
        Model Builder workshops and impressive LEGO reconstructions of Toronto’s most iconic
        attractions.</string>
    <string name="square_one">Make your way southwest to Mississauga, where more retail delights
        await. Square One is the largest mall in Ontario, boasting over 360 stores and services in
        more than 1.6 million square feet of space. You’ll feel like Dorothy in the Emerald City as
        you explore its many shops.
    \n\nHigh-end fashion is the name of the game at boutiques like Ann Taylor, M for Mendocino and
        Stars Mens. And with Ben Sherman and Simons opening in March 2016, the fashion game gets
        kicked up an extra notch. And of course there are plenty of specialty stores for
        accessories, footwear, electronics and more.</string>
    <string name="sherway_garden">A short hop, skip and jump away from Square One lies Sherway
        Gardens. Easy to spot due to its distinctive tented roof, Sherway Gardens has a geometric
        layout that makes it feel like you’re strolling the streets of a well-maintained shopping
        district.
        \n\nCheck out Saks Fifth Avenue or Rinascimento women’s wear. For high-end men’s apparel,
        head to Harry Rosen. If you prefer a one-stop shopping experience, it’s hard to beat the
        selection of quality merchandise at Holt Renfrew. </string>
    <string name="dixie_outlet_malls">Wind down your evening at Dixie Outlet Mall, where you can
        find designer clothing for a fraction of the regular price. Canada’s largest enclosed
        outlet mall boasts several brand name outlets – such as Guess, Mexx, Tommy Hilfiger, and
        Levis – in addition to regular non-outlet stores like Ricki’s and Fairweather.
    \nThe only thing better than getting that perfect pair of designer jeans is getting them 30%-70%
        off regular retail price. You’ll be surprised at what treasures you can find with a bit of
        bargain-hunting at Dixie Outlet Mall!</string>
    <string name="toronto_premium_outlet">Can’t find exactly what you’re looking for at Dixie
        Outlet Mall? Toronto Premium Outlets may have what you crave. Although a bit farther out
        from the city core, the impressive collection of high-end brands for outlet prices is sure
        to appeal to bargain-hunters of all stripes.
        \n\nDesigner fashions and sportswear outlets include everything from Adidas to Hugo Boss
        to Ted Baker London to Zumiez. Whichever time of year you go, you’re guaranteed to find
        impressive savings at Toronto Premium Outlets.</string>
    <string name="terroni">There’s always something delicious cooking at Terroni.
        With its rustic décor, comfortable seating and laid-back atmosphere, this Southern
        Italian-inspired restaurant is a great place for a family meal. You’ll love the selection
        of fresh pastas and extensive wine list, while your kids will love the 28 pizza options and
        dessert menu.</string>
    <string name="barbqe_smokehouse">Barque Smokehouse offers delicious, feel-good barbecue fare
        that will have everyone licking their fingers (and plates!). Its Kid’s Menu includes a
        drink, meat selection, side dish and cookie or gelato for $10.00. Also, every Sunday is
        family night, which means huge and affordable platters for sharing…</string>
    <string name="il_fornello">Danforth Avenue is known mainly for its numerous Greek restaurants,
        but Il Fornello serves up Italian fare that rivals the best of them. From calamari, to
        chicken parmigiana, to seafood linguini, there’s plenty here to appeal to mature palates.
        Smaller mouths will love the spaghetti n meatballs and pepperoni pizza.</string>
    <string name="uncle_bettys">Family owned and operated, Uncle Betty’s Diner specializes in
        gourmet comfort food that is enticing to kids and kids-at-heart alike. Options for all
        ages include hotdogs and sloppy joes, while their dedicated 13-and-under menu features
        other kid-approved favourites like mac ‘n cheese and chicken fingers. The ice cream bar
        provides a sweet ending to a tasty meal.</string>
    <string name="the_ace">The children’s menu at The Ace includes more than your standard fare.
        Yes, there’s grilled cheese and spaghetti, but there’s also more sophisticated dishes
        like broccoli with aged cheddar sauce. Grown-ups have options ranging from arugula salad
        to Ace’s famous country-fried chicken, any of which can be paired with a cocktail or glass
        of wine from the extensive drink menu.</string>
    <string name="magic_oven">Known for its healthy pizzas made with fresh, local and organic
        ingredients and Magic Oven has multiple locations around the city. You’ll find plenty of
        families at the Danforth location on Mondays between 5 p.m. and 9 p.m., when kids eat free.
        The kids’ menu comes with a quiz and puzzles to keep tots occupied while they wait for their
        food to arrive. Nutritious and delicious!</string>
    <string name="mandarin">With several locations in the Greater Toronto Area, Mandarin has long
        been a favourite destination for families. Its all-you-can-eat Chinese-Canadian buffet
        provides options for all tastes. If your kids aren’t crazy about wonton soup and maki rolls,
        they can always head for the oven-baked pizzas and barbecued chicken instead.</string>
</resources>